# notif-server

./: .gitignore  Cargo.toml  README.md  notif-server.service  notifications.db
migrations/: 20251114225954_create_notifications_table.sql
src/: db.rs  main.rs
