[package]
name = "notif-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
